# Patent-GPT

./: .env.example  .gitignore  LICENSE  README.ko.md  README.md  TASKBOARD.md  patent-gpt-light.html  patent-gpt-prototype.jsx  pyproject.toml
.cursor/rules/: patent-gpt-core-standards.mdc  python-llm-ml-workflow-imported.mdc
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: ai_model_update.md  bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  sprint-backlog.md  task.yml
app/: config.py  main.py
app/models/: evaluation.py  patent_draft.py  session.py  state.py  triz.py
app/prompts/: classifier.py  crag.py  evasion.py  novelty.py  parameter_extractor.py  triz_expert.py
data/: triz_contradiction_matrix.json  triz_principles.json
docs/: PROJECT_BOARD_GUIDE.md
frontend/: .env.example  .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
scripts/: build_triz_labels_from_raw.py  build_triz_training_data.py  ingest_patents.py  ingest_sample.py  setup_github_labels.sh  train_triz_classifier.py  translate_triz_labels.py
tests/: test_config.py  test_contradiction_matrix.py  test_draft_generator.py  test_evaluation_service.py  test_health.py  test_keyword_field.py  test_kipris_client.py  test_memory_service.py  test_ml_classifier.py  test_models.py  test_models_triz.py  test_patent_route.py  test_patent_searcher.py  test_patent_service.py  test_reasoning_agent.py  test_sse_stream.py  test_triz_classifier.py
wiki/: Architecture.md  Home.md  TRIZ_Methodology.md
(+46 files in other folders)
